# LatteProj

./: .gitignore  CMakeLists.txt  README.md
cmake/: LatteLongLatteProjExtra.cmake.in  cmake_uninstall.cmake.in
examples/: CMakeLists.txt  ProjComboBox.hpp  main.cpp
include/: ProjProjection.h
include/Latte/Projection/: CRSProjection.h
src/: ProjProjection.cpp
src/Latte/Projection/: CRSProjection.cpp
tests/: CMakeLists.txt  ProjComboBox.hpp  csv_projection_test.cpp  dataset_example.csv  main.cpp  readme.md  simple_dataset.hpp
